fixing broken css

--- a/Darts-Phoebe/phoebetemp.css
+++ b/Darts-Phoebe/phoebetemp.css
@@ -17,7 +17,7 @@
 }
 
 
-header.homepage {
+header.home {
   margin: 2px;
   margin-top: 13vh;
   margin-bottom: 1vh;
@@ -45,13 +45,13 @@ h3.gametext + p {
   text-align: center;
 }
 
-main.homepage {
+main.home {
   margin: 2vw;
   padding: 2vw;
   height: auto;
 }
 
-section.homepage {
+section.home {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -75,7 +75,7 @@ a.just-link {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-footer.homepage {
+footer.home {
   margin: 2vh;
   text-align: center;
 }
@@ -84,7 +84,7 @@ footer.homepage {
 /* game 1, phoebe code */
 
 
-#darts {
+.darts {
     background-color: white; 
     max-height: 100%;
     margin: 0;
